--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^0.19.2",
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.1",
+		"dotenv": "^16.3.1",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.1.7-alpha.3",
 		"express-validator": "^6.4.1",
