--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 		"@routes": "./routes",
 		"@config": "./config",
 		"@constants": "./constants"
-	  },
-
+	},
 	"author": "Neil Kapadia",
 	"license": "ISC",
 	"dependencies": {
@@ -32,6 +31,7 @@
 		"express-validator": "^6.4.1",
 		"jsonwebtoken": "^8.5.1",
 		"module-alias": "^2.2.3",
+		"moment": "^2.30.1",
 		"mongoose": "^5.9.12",
 		"uuidv4": "^6.0.8"
 	},
