--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"axios": "^0.19.2",
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.17.1",
 		"express-fileupload": "^1.1.7-alpha.3",
