--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 services:
-  mongodb:
+  school_mongo:
     image: 'mongo'
     container_name: 'school_mongo'
     ports:
       - '27017:27017'
-    # volumes:
-    #   -
+    volumes:
+      - mongodb_data:/data/db
 
   school_management_backend:
     image: '.'
@@ -17,3 +17,5 @@ services:
       - '3001:3001'
     environment:
       - MONGO_URI="mongo://school_mongo:27017"
+volumes:
+  mongodb_data:
